--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     },
     "keywords": [
       "easymod",
-      "methods",
-      "javascript"
+      "easyjs",
+      "easy"
     ],
     "author": "BonesYT",
     "license": "MIT",
